# doc-scan

./: Makefile.am  NEWS  README.md  autogen.sh  configure.ac  doc-scan.doap
data/: Makefile.am  doc-scan.1  doc-scan.desktop.in  doc-scan.ui  doc-scan.ui~  org.tga.DocScan.gschema.xml.in
help/: Makefile.am
help/C/: crop.page  index.page  print.page  rotate.page  scanner.page  scanning.page  shortcuts.page
help/de/: de.po
po/: POTFILES.in  POTFILES.skip  af.po  ar.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  lt.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  (+9 more)
src/: Makefile.am  autosave-manager.vala  book.vala  doc-scan.vala  sane.vapi  ui.vala
